index.html thru validator

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<title>Coffee Project Co.</title>
-    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png" />
 </head>
 
 <body>
 	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -29,14 +29,15 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
@@ -44,9 +45,9 @@
 						</li>
 					</ul>
 
-                    <div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -63,7 +64,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -76,163 +77,171 @@
 								</a>
 							</li>
 						</ul>
-                        </div>
+					</div>
 				</div>
 		</nav>
 
-
 	</header>
 
-		<!-- jumbotron hero image -->
+	<!-- jumbotron hero image -->
 
-		<div class="container landing-container px-0">
-			<div class="row no-gutters">
-				<div class="col-12">
-					<div class="jumbotron">
-						<h1 class="display-3">Welcome</h1>
-						<p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in
-							the world</p>
-						<hr class="section-divider">
-						<p>SCA accredited training courses to suit all skill levels!<a href="intro.html"
-								class="badge badge-landing">New</a></p>
-					</div>
+	<div class="container landing-container px-0">
+		<div class="row no-gutters">
+			<div class="col-12">
+				<div class="jumbotron">
+					<h1 class="display-3">Welcome</h1>
+					<p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in
+						the world</p>
+					<hr class="section-divider">
+					<p>SCA accredited training courses to suit all skill levels!<a href="intro.html"
+							class="badge badge-landing">New</a></p>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- about us -->
+	<!-- about us -->
 
-		<div class="container my-4 px-0">
-			<div class="row no-gutters">
-				<div class="col-12">
-					<div class="quote-landing">
-						<p class="quote mx-1"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short,
-							enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
-					</div>
-				</div>
-			</div>
-            </div>
-		<div class="container my-4 px-0">
-			<div class="row no-gutters">
-				<div class="col-12">
-					<div class="about text-center">
-						<h4>Coffee Project Co. is a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
-							world.</h4>
-					</div>
+	<div class="container my-4 px-0">
+		<div class="row no-gutters">
+			<div class="col-12">
+				<div class="quote-landing">
+					<p class="quote mx-1"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short,
+						enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
 				</div>
 			</div>
 		</div>
-
+	</div>
+	<div class="container my-4 px-0">
+		<div class="row no-gutters">
+			<div class="col-12">
+				<div class="about text-center">
+					<h4>Coffee Project Co. is a wholesale coffee roastery renowned for sourcing speciality coffee from
+						all over the
+						world.</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- what we do -->
 
-<div class="landing pb-5">
-	<div class="container cards-landing-container text-center">
-<h2 class="uppercase our-story pt-5">Our story</h2>
-<hr class="section-divider">
-<div class="cards-landing-heading">
-<p>Brian is Australian and first learn to barist and roast in Sydndey.</p>
-<p>In 2008 he married his Irish wife, Sophie and moved back to Ireland to set up a roastery in a shed overlooking Blackwater Valley.</p>
-<p>They built a new roastery and green bean store in 2013</p>
-<p><em>...and the rest is history!</em></p>
-</div>
-</div>
+	<div class="landing pb-5">
+		<div class="container cards-landing-container text-center">
+			<h2 class="uppercase our-story pt-5">Our story</h2>
+			<hr class="section-divider">
+			<div class="cards-landing-heading">
+				<p>Brian is Australian and first learn to barist and roast in Sydney.</p>
+				<p>In 2008 he married his Irish wife, Sophie and moved back to Ireland to set up a roastery in a shed
+					overlooking Blackwater Valley.</p>
+				<p>They built a new roastery and green bean store in 2013</p>
+				<p><em>...and the rest is history!</em></p>
+			</div>
+		</div>
 
+		<div class="row cards-landing-row">
+			<div class="col-12 col-md-4 cards-landing-column">
+				<h2 class="uppercase text-center cards-h2">coffees</h2>
+				<img src="./assets/images/landing1.png" class="cards-landing-img" alt="coffee plant icon image" style="width:100%">
+				<div class="cards-landing-text">
+					<p>At Coffee Project Co. we travel all the globe to meet with farmers, importers and exporters
+						sourcing the freshest seasonal coffees for our customers.</p>
+				</div>
+				<div style="text-align: center;">
+					<button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">More on coffees</button>
+				</div>
+				<div id="collapse1" class="collapse collapse-landing">
+					<p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
+					<p>As we bring in coffee beans from exotic lands around the world, we test out different roasting
+						times
+						so we know how best to present them to you so you get the perfect balance of acidity, body and
+						aroma. Each batch has its own unique roasted qualities.</p>
+					<p>You can browse all of our latest wholesale coffees online</p> <a href="coffees.html">
+						here</a>
+				</div>
+			</div>
 
-<div class="row cards-landing-row">
-  <div class="col-12 col-md-4 cards-landing-column">
-    <h2 class="uppercase text-center cards-h2">coffees</h2>
-    <img src="./assets/images/landing1.png" class="cards-landing-img" alt="coffee plant icon image" style="width:100%">
-    <div class="cards-landing-text">
-    <p>At Coffee Project Co. we travel all the globe to meet with farmers, importers and exporters sourcing the freshest seasonal coffees for our customers.</p>
-    </div>
-   <div style="text-align: center;"><button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">More on coffees</button></div>
-   <div id="collapse1" class="collapse collapse-landing">
-    <p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
-				<p>As we bring in coffee beans from exotic lands around the world, we test out different roasting times
-					so we know how best to present them to you so you get the perfect balance of acidity, body and
-					aroma. Each batch has its own unique roasted qualities.</p>
-				<p>You can browse all of our latest wholesale coffees online <a href="coffees.html">
-						here</p></a>
-  </div>
-  </div>
+			<div class="col-12 col-md-4 cards-landing-column">
+				<h2 class="uppercase text-center cards-h2">courses</h2>
+				<img src="./assets/images/landing2.png" class="cards-landing-img" alt="barista icon image" style="width:100%">
+				<div class="cards-landing-text">
+					<p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the
+						needs of baristas and coffee professionals everywhere.</p>
+				</div>
+				<div style="text-align: center;">
+					<button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">More on courses</button>
+				</div>
+				<div id="collapse2" class="collapse collapse-landing">
+					<p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the
+						needs of
+						baristas and coffee professionals everywhere</p>
+					<p>The program allows you to complete courses in six subject modules and three levels of
+						certifications,
+						amassing course credits that count towards the 100 points needed to gain SCA internationally
+						recognized
+						Coffee Diploma.</p>
+					<p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points.</p>
+					<p>Start</p><a href="intro.html"> here</a>
+				</div>
+			</div>
 
-  <div class="col-12 col-md-4 cards-landing-column">
-  <h2 class="uppercase text-center cards-h2">courses</h2>
-    <img src="./assets/images/landing2.png" class="cards-landing-img" alt="barista icon image" style="width:100%">
-    <div class="cards-landing-text">
-    <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere.</p>
-    </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">More on courses</button></div>
-  <div id="collapse2" class="collapse collapse-landing">
-    <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
-				baristas and coffee professionals everywhere</p>
-			<p>The program allows you to complete courses in six subject modules and three levels of certifications,
-				amassing course credits that count towards the 100 points needed to gain SCA internationally recognized
-				Coffee Diploma.</p>
-			<p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points.</p>
-				<p>Start<a href="intro.html"> here</a><p>
-  </div>
-  </div>
+			<div class="col-12 col-md-4 cards-landing-column">
+				<h2 class="uppercase text-center cards-h2">brewing</h2>
+				<img src="./assets/images/landing3.png" class="cards-landing-img " alt="book and coffee cup icon image" style="width:100%">
+				<div class="cards-landing-text">
+					<p>You’ve got your well sourced and roasted coffee beans. You’ve got a reliable coffee grinder and
+						you’ve got a brewing device? Now it’s time for the magic.</p>
+				</div>
+				<div style="text-align: center;">
+					<button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">More on brewing</button>
+				</div>
+				<div id="collapse3" class="collapse collapse-landing">
+					<p>There is a wide acceptance that manual brewing methods allow for better quality control and a
+						superior coffee experience.</p>
+					<p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process
+						rather than hitting a ‘brew’ button on a machine.</p>
+					<p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range
+						of gadgets and differing opinions.</p>
 
-  <div class="col-12 col-md-4 cards-landing-column">
-  <h2 class="uppercase text-center cards-h2">brewing</h2>
-    <img src="./assets/images/landing3.png" class="cards-landing-img " alt="book and coffee cup icon image" style="width:100%">
-<div class="cards-landing-text">
-    <p>You’ve got your well sourced and roasted coffee beans. You’ve got a reliable coffee grinder and you’ve got a brewing device? Now it’s time for the magic.</p>
-    </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">More on brewing</button></div>
-  <div id="collapse3" class="collapse collapse-landing">
-    <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
-       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
-       <p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
+					<p>Browse our guides</p><a href="brewing.html"> here</a>
 
-			<p>Browse our guides <a href="brewing.html"> here</a></p>
+				</div>
+			</div>
 
-  </div>
-  </div>
+		</div>
 
-</div>
+	</div>
 
-</div>
-</div>
+	<hr class="section-divider">
 
-<hr class="section-divider">
+	<!-- sign up -->
 
-<!-- sign up -->
+	<div class="container signup-container mt-3">
+		<div class="row no-gutters">
+			<div class="col-12">
+				<div class="text-center">
+					<h3 class="form-heading uppercase my-4 py-4">Stay updated </h3>
+					<p class="my-3" style="font-weight: bold;">To receive all the latest coffee news, insights, free
+						training tools and special offers, sign up to our monthly newsletter.</p>
+					<i class="fas fa-mail-bulk fa-5x"></i>
+				</div>
 
-				<div class="container signup-container mt-3">
-					<div class="row no-gutters">
-						<div class="col-12">
-                        <div class="text-center">
-							<h3 class="form-heading uppercase my-4 py-4">Stay updated </h3>
-                            <p class="my-3" style="font-weight: bold;">To receive all the latest coffee news, insights, free training tools and special offers, sign up to our monthly newsletter.</p>
-                            <i class="fas fa-mail-bulk fa-5x"></i>
-							</div>
+				<form>
+					<div class="form-group signup-form ">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+						<small id="emailHelp" class="form-text text-muted">*We promise not to share with third parties.</small>
+					</div>
 
-                            <form>
-								<div class="form-group signup-form ">
-									<label for="exampleInputEmail1">Email address</label>
-									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-									<small id="emailHelp" class="form-text text-muted">*We promise not to share with third parties.</small>
-								</div>
-								<div class="form-group">
-									<label for="password">Password</label>
-									<input type="password" class="form-control" id="password" placeholder="Password">
-                                </div>
-									<div class="form-group">
-										<label for="repeatPassword">Repeat Password</label>
-										<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
-                                    </div>
-                                        <div class="text-center">
-										<button type="submit" class="btn my-button">Submit</button>
-                                        </div>
-							</form>
-                            </div>
-                            </div>
-                            </div>
+					<div class="text-center">
+						<button type="submit" class="btn my-button">Submit</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 
-<!-- footer -->
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -287,10 +296,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -307,16 +316,15 @@
 		</div>
 	</footer>
 
-
-							<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-								integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-								crossorigin="anonymous"></script>
-							<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-								integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-								crossorigin="anonymous"></script>
-							<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-								integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-								crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
