--- a/aeropress.html
+++ b/aeropress.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-    <header>
+	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -28,23 +29,25 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -61,7 +64,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -74,79 +77,84 @@
 								</a>
 							</li>
 						</ul>
+					</div>
 				</div>
 		</nav>
 
 
-    </header>
-<!-- brew guides -->
 
-<div class="container main-container">
-<div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
-          <p class="ph-landing">Brewing</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  <br>
+	</header>
+	<!-- brew guides -->
 
-    <!-- main section -->
+	<div class="container main-container">
+		<div class="container headers-landing">
+			<div class="row">
+				<div class="col">
+					<img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
+					<p class="ph-landing">Brewing</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 
-    <div class="container">
-        <div class="brewing-container">
-            <div class="row">
-                <div class="col">
-                    <h2>The Aeropress</h2>
-                    <hr class="section-divider">
-                    <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
-                    <p>Here’s the method we use ourselves:</p>
-                    <p>You will need:</p>
-                    <ul>
-                        <li>Aeropress</li>
-                        <li>Scales</li>
-                        <li>Timer</li>
-                        <li>Two filter papers</li>
-                        <li>17g coffee</li>
-                        <li>250 filtered water, just off the boil</li>
-                        <li>Sturdy jug or mug</li>
-                    </ul>
-                    <ol>
-                        <li>Place two filter papers into cap and screw on tight.</li>
-                        <li>Rinse out with hot water and place on top of your jug.</li>
-                        <li>Grind 17g of coffee and put into the chamber.</li>
-                        <li>Pour in 250g of water and immediately start a timer.</li>
-                        <li>Stir thoroughly (we use three stirs clockwise and three anticlockwise).</li>
-                        <li>Put the plunger just inside the chamber.</li>
-                        <li>Once the timer reaches 1:30, start to push down on the plunger.</li>
-                        <li>Aim to finish plunging at 2:00.</li>
-                    </ol>
-                    <h4>Enjoy!</h4>
-                </div>
-            </div>
-        </div>
-    </div>
+	<!-- main section -->
 
-    <div class="text-center">
-        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
-        </div>
+	<div class="container">
+		<div class="brewing-container">
+			<div class="row">
+				<div class="col">
+					<h2>The Aeropress</h2>
+					<hr class="section-divider">
+					<p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our
+						opinion, the instructions that Aeropress provide themselves are not the best way to use this
+						brewer!</p>
+					<p>Here’s the method we use ourselves:</p>
+					<p>You will need:</p>
+					<ul>
+						<li>Aeropress</li>
+						<li>Scales</li>
+						<li>Timer</li>
+						<li>Two filter papers</li>
+						<li>17g coffee</li>
+						<li>250 filtered water, just off the boil</li>
+						<li>Sturdy jug or mug</li>
+					</ul>
+					<ol>
+						<li>Place two filter papers into cap and screw on tight.</li>
+						<li>Rinse out with hot water and place on top of your jug.</li>
+						<li>Grind 17g of coffee and put into the chamber.</li>
+						<li>Pour in 250g of water and immediately start a timer.</li>
+						<li>Stir thoroughly (we use three stirs clockwise and three anticlockwise).</li>
+						<li>Put the plunger just inside the chamber.</li>
+						<li>Once the timer reaches 1:30, start to push down on the plunger.</li>
+						<li>Aim to finish plunging at 2:00.</li>
+					</ol>
+					<h4>Enjoy!</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <hr class="section-divider">
+	<div class="text-center">
+		<a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+	</div>
 
-    <!-- sub-section -->
+	<hr class="section-divider">
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="brewing-download">Want to download it as pdf?</p>
-                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
-            </div>
-        </div>
-    </div>
+	<!-- sub-section -->
 
-<!-- footer -->
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<p class="brewing-download">Want to download it as pdf?</p>
+				<p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a
+						href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
+			</div>
+		</div>
+	</div>
+
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -201,10 +209,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -221,9 +229,15 @@
 		</div>
 	</footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
