chemex.html thru validator

--- a/cafetiere.html
+++ b/cafetiere.html
@@ -28,23 +28,25 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -61,7 +63,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -74,9 +76,9 @@
 								</a>
 							</li>
 						</ul>
+					</div>
 				</div>
 		</nav>
-
 
     </header>
 
