--- a/chemex.html
+++ b/chemex.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-  <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-  <header>
+	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -28,23 +29,25 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -61,7 +64,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -74,82 +77,90 @@
 								</a>
 							</li>
 						</ul>
+					</div>
 				</div>
 		</nav>
 
 
-  </header>
+	</header>
 
-<!-- brew guides -->
+	<!-- brew guides -->
 
-<div class="container main-container">
-<div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
-          <p class="ph-landing">Brewing</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  <br>
+	<div class="container main-container">
+		<div class="container headers-landing">
+			<div class="row">
+				<div class="col">
+					<img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
+					<p class="ph-landing">Brewing</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 
-  <!-- main section -->
+	<!-- main section -->
 
-  <div class="container">
-    <div class="brewing-container">
-      <div class="row">
-        <div class="col">
-          <h2>V60 | Chemex | Kalita</h2>
-          <hr class="section-divider">
-          <p>There are subtle differences between the different brands of pour-over brewer, but they all follow the same principles and all produce delicate, refined brews.</p>
-          <p>We suggest using a Buono pouring kettle but anything that allows you to pour a thin, steady stream of water will work. If you’re using a separate vessel for pouring then be sure to preheat it with boiling water, then add boiling water just before
-            pouring, to minimise heat loss.</p>
-          <p>The amounts suggested here are perfect for a V60 02 size brewer - adjust the amounts accordingly for larger or smaller brewers.</p>
-          <p>You will need:</p>
-          <ul>
-            <li>Filter cone</li>
-            <li>Filter paper to fit</li>
-            <li>Pouring kettle</li>
-            <li>Scales</li>
-            <li>Timer</li>
-            <li>Filtered water, just off the boil</li>
-            <li>60g of coffee per litre of water</li>
-            <li>Jug or mug</li>
-          </ul>
-          <ol>
-            <li>Put filter into cone and rinse thoroughly with hot water.</li>
-            <li>Add 30g ground coffee and shake lightly to settle. </li>
-            <li>Set up cone and jug on the scales, set scales to zero and start a timer.</li>
-            <li>Pour on about 60g of water and stir thoroughly to ensure all the grounds are evenly wetted.</li>
-            <li>Wait until the coffee stops producing gas bubbles - about 30 seconds should do it. </li>
-            <li>Gradually pour on the remaining water until you reach 500g. Pour in gentle spirals onto the surface of the coffee, so that the water reaches all parts of the coffee evenly.</li>
-            <li>Aim to have all the water in the brewer by 2:00.</li>
-          </ol>
-          <h4>Enjoy!</h4>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="brewing-container">
+			<div class="row">
+				<div class="col">
+					<h2>V60 | Chemex | Kalita</h2>
+					<hr class="section-divider">
+					<p>There are subtle differences between the different brands of pour-over brewer, but they all
+						follow the same principles and all produce delicate, refined brews.</p>
+					<p>We suggest using a Buono pouring kettle but anything that allows you to pour a thin, steady
+						stream of water will work. If you’re using a separate vessel for pouring then be sure to preheat
+						it with boiling water, then add boiling water just before
+						pouring, to minimise heat loss.</p>
+					<p>The amounts suggested here are perfect for a V60 02 size brewer - adjust the amounts accordingly
+						for larger or smaller brewers.</p>
+					<p>You will need:</p>
+					<ul>
+						<li>Filter cone</li>
+						<li>Filter paper to fit</li>
+						<li>Pouring kettle</li>
+						<li>Scales</li>
+						<li>Timer</li>
+						<li>Filtered water, just off the boil</li>
+						<li>60g of coffee per litre of water</li>
+						<li>Jug or mug</li>
+					</ul>
+					<ol>
+						<li>Put filter into cone and rinse thoroughly with hot water.</li>
+						<li>Add 30g ground coffee and shake lightly to settle. </li>
+						<li>Set up cone and jug on the scales, set scales to zero and start a timer.</li>
+						<li>Pour on about 60g of water and stir thoroughly to ensure all the grounds are evenly wetted.
+						</li>
+						<li>Wait until the coffee stops producing gas bubbles - about 30 seconds should do it. </li>
+						<li>Gradually pour on the remaining water until you reach 500g. Pour in gentle spirals onto the
+							surface of the coffee, so that the water reaches all parts of the coffee evenly.</li>
+						<li>Aim to have all the water in the brewer by 2:00.</li>
+					</ol>
+					<h4>Enjoy!</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<div class="text-center">
-        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
-        </div>
+	<div class="text-center">
+		<a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+	</div>
 
-  <hr class="section-divider">
+	<hr class="section-divider">
 
-  <!-- sub-section -->
+	<!-- sub-section -->
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <p class="brewing-download">Want to download it as pdf?</p>
-        <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/V60-Chemex-Brew-Guide.pdf" target="_blank">here</a></p>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<p class="brewing-download">Want to download it as pdf?</p>
+				<p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a
+						href="./assets/images/V60-Chemex-Brew-Guide.pdf" target="_blank">here</a></p>
+			</div>
+		</div>
+	</div>
 
- <!-- footer -->
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -204,10 +215,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -224,9 +235,15 @@
 		</div>
 	</footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
