--- a/contact.html
+++ b/contact.html
@@ -28,23 +28,25 @@
 							<a class="nav-link" href="coffees.html">Coffees</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Courses</a>
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+								data-toggle="dropdown">Courses</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="intro.html">Intro to coffee</a>
 								<a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
 								<a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
 							</div>
 						</li>
-                        <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="brewing.html">Guides</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
-                    <div class="col d-inline-flex justify-content-right d-sm-none d-lg-inline">
+
+					<div class="col d-inline-flex justify-content-center d-sm-none d-lg-inline">
 						<ul class="list-inline navmedia">
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook-f" aria-hidden="true"></i>
 									<span class="sr-only">Facebook</span>
@@ -61,7 +63,7 @@
 									<span class="sr-only">LinkedIn</span>
 								</a>
 							</li>
-                            <li class="list-inline-item">
+							<li class="list-inline-item">
 								<a href="https://www.pinterest.com/" target="_blank">
 									<i class="fab fa-pinterest" aria-hidden="true"></i>
 									<span class="sr-only">Pinterest</span>
@@ -74,6 +76,7 @@
 								</a>
 							</li>
 						</ul>
+					</div>
 				</div>
 		</nav>
 
@@ -209,7 +212,7 @@
 			<div class="col-12 col-lg-4">
 				<div class="media">
 					<div class="d-none d-sm-block">
-						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
+						<img src="./assets/images/man1.jpg" class="my-border mr-3 p-2 quote-img" alt="image of man" height=100 width=100>
               </div>
 						<div class="media-body">
 							<blockquote class="blockquote">
@@ -225,11 +228,11 @@
 				<div class="col-12 col-lg-4">
 					<div class="media">
 						<div class="d-none d-sm-block">
-							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
+							<img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2 quote-img" alt="image of woman" height=100 width=100>
               </div>
 							<div class="media-body">
 								<blockquote class="blockquote">
-                                <div><i class="far fa-thumbs-up"></i>
+                                <div><i class="far fa-thumbs-up" aria-hidden="true"></i>
 									<p> "I got a job within a week. Really recommended!"</p>
 									<div class="d-none d-sm-block d-md-none d-lg-block">
 										<p> (Molly Brady)</p></div>
@@ -241,7 +244,7 @@
 					<div class="col-12 col-lg-4">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2 quote-img" height=100 width=100>
+								<img src="./assets/images/man2.jpg" class="my-border mr-3 p-2 quote-img" alt="image of man" height=100 width=100>
               </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
