--- a/espresso.html
+++ b/espresso.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-    <header>
+	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -80,96 +81,116 @@
 				</div>
 		</nav>
 
+	</header>
 
-    </header>
+	<!-- brew guides -->
 
-<!-- brew guides -->
+	<div class="container main-container">
+		<div class="container headers-landing">
+			<div class="row">
+				<div class="col">
+					<img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
+					<p class="ph-landing">Brewing</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 
-<div class="container main-container">
-<div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
-          <p class="ph-landing">Brewing</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  <br>
+	<!-- main section -->
 
-    <!-- main section -->
+	<div class="container">
+		<div class="brewing-container">
+			<div class="row">
+				<div class="col">
+					<h2>Espresso | The shot</h2>
+					<hr class="section-divider">
+					<p>Before you even begin, be sure to preheat your machine, portafilter and cup by pulling a ‘blank’
+						shot, which means running water through the portafilter and cup without using espresso.</p>
+					<p>Depending on your espresso machine, it make take 15-30 minutes to heat up.</p>
+					<p>You will need:</p>
+					<ul>
+						<li>Espresso machine</li>
+						<li>Grinder</li>
+						<li>Scale</li>
+						<li>Portafilter</li>
+						<li>Tamper</li>
+						<li>FILTERED water (bad quality water can affect the taste of your espresso and even damage your
+							machine)</li>
+						<li>Cup</li>
+						<li>Timer</li>
+						<li>Fresh quality coffee (try our 100% fair trade, organic certified 'Blackwater' blend)</li>
+					</ul>
+					<ol>
+						<li>Grind
+							<p>Always grind fresh whole beans right before brewing [this goes for any and every brew
+								method. The grind texture is an important aspect of shot quality.</p>
+							<p>Too fine a grind will cause a slow, over-extracted shot that can taste bitter and burnt.
+								Too coarse a grind will result in an under-extracted shot that is weak, watery and
+								tastes sour.</p>
+							<p>The ideal grind texture you are looking for is something similar to that of granulated
+								sugar, but to know for sure, you will need to test out your grinder and machine [as well
+								as base it off your own personal preference].</p>
+						</li>
+						<li>Dose
+							<p>The dose refers to the amount of coffee you will need to fill the portafilter to make
+								your espresso shot.
+								<p>
+									<p>The dose for a “double-shot” [the most common way espresso is made] should be
+										between 14 – 18 grams [this also depends on your espresso machine and personal
+										preference].</p>
+						</li>
+						<li>Tamp
+							<p>Tamping ensures uniformity of extraction by levelling and packing the grounds to ensure
+								equal and consistent water contact is forced through the coffee.</p>
+							<p>The proper tamp method is to hold your elbow at 90 degrees, rest your portafilter on a
+								level surface and then apply pressure until the coffee has an even, polished look. Note:
+								coarser grounds will require a firmer tamp than
+								finer grounds.</p>
+						</li>
+						<li>Brew
+							<p>Place the portafilter into your machine’s brew head and place your preheated cup beneath
+								it.</p>
+							<p>Grab a timer and time your shot – this is critical to learning how to pull a perfect
+								shot. Initiate the pull and watch carefully!</p>
+						</li>
+						<li>Results
+							<p>If the dose, grind and tamp are ideal, the first part of the brew should be dark before
+								it turns to a golden brown/foamy mixture that flows into the cup in a thin stream
+								[without breaking].</p>
+							<p>The volume of water for each shot should be 1 oz. – so after your double shot has reached
+								2 oz., stop the shot and check your timer.</p>
+							<p>The ideal brewing time you’re looking for is between 20 – 30 seconds – if you’re running
+								too long or too short, check your grind, dose and tamp, then adjust it accordingly. If
+								your shots are coming out unevenly from both spouts,
+								your tamp needs to be more even.</p>
+						</li>
+					</ol>
+					<h4>Enjoy!</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <div class="container">
-        <div class="brewing-container">
-            <div class="row">
-                <div class="col">
-                    <h2>Espresso | The shot</h2>
-                    <hr class="section-divider">
-                    <p>Before you even begin, be sure to preheat your machine, portafilter and cup by pulling a ‘blank’ shot, which means running water through the portafilter and cup without using espresso.</p>
-                    <p>Depending on your espresso machine, it make take 15-30 minutes to heat up.</p>
-                    <p>You will need:</p>
-                    <ul>
-                        <li>Espresso machine</li>
-                        <li>Grinder</li>
-                        <li>Scale</li>
-                        <li>Portafilter</li>
-                        <li>Tamper</li>
-                        <li>FILTERED water (bad quality water can affect the taste of your espresso and even damage your machine)</li>
-                        <li>Cup</li>
-                        <li>Timer</li>
-                        <li>Fresh quality coffee (try our 100% fair trade, organic certified 'Blackwater' blend)</li>
-                    </ul>
-                    <ol>
-                        <li>Grind
-                            <p>Always grind fresh whole beans right before brewing [this goes for any and every brew method. The grind texture is an important aspect of shot quality.</p>
-                            <p>Too fine a grind will cause a slow, over-extracted shot that can taste bitter and burnt. Too coarse a grind will result in an under-extracted shot that is weak, watery and tastes sour.</p>
-                            <p>The ideal grind texture you are looking for is something similar to that of granulated sugar, but to know for sure, you will need to test out your grinder and machine [as well as base it off your own personal preference].</p>
-                        </li>
-                        <li>Dose
-                            <p>The dose refers to the amount of coffee you will need to fill the portafilter to make your espresso shot.
-                                <p>
-                                    <p>The dose for a “double-shot” [the most common way espresso is made] should be between 14 – 18 grams [this also depends on your espresso machine and personal preference].</p>
-                        </li>
-                        <li>Tamp
-                            <p>Tamping ensures uniformity of extraction by levelling and packing the grounds to ensure equal and consistent water contact is forced through the coffee.</p>
-                            <p>The proper tamp method is to hold your elbow at 90 degrees, rest your portafilter on a level surface and then apply pressure until the coffee has an even, polished look. Note: coarser grounds will require a firmer tamp than
-                                finer grounds.</p>
-                        </li>
-                        <li>Brew
-                            <p>Place the portafilter into your machine’s brew head and place your preheated cup beneath it.</p>
-                            <p>Grab a timer and time your shot – this is critical to learning how to pull a perfect shot. Initiate the pull and watch carefully!</p>
-                        </li>
-                        <li>Results
-                            <p>If the dose, grind and tamp are ideal, the first part of the brew should be dark before it turns to a golden brown/foamy mixture that flows into the cup in a thin stream [without breaking].</p>
-                            <p>The volume of water for each shot should be 1 oz. – so after your double shot has reached 2 oz., stop the shot and check your timer.</p>
-                            <p>The ideal brewing time you’re looking for is between 20 – 30 seconds – if you’re running too long or too short, check your grind, dose and tamp, then adjust it accordingly. If your shots are coming out unevenly from both spouts,
-                                your tamp needs to be more even.</p>
-                        </li>
-                    </ol>
-                    <h4>Enjoy!</h4>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="text-center">
+		<a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+	</div>
 
-    <div class="text-center">
-        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
-        </div>
+	<hr class="section-divider">
 
-    <hr class="section-divider">
+	<!-- sub-section -->
 
-    <!-- sub-section -->
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<p class="brewing-download">Want to download it as pdf?</p>
+				<p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a
+						href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
+			</div>
+		</div>
+	</div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="brewing-download">Want to download it as pdf?</p>
-                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
-            </div>
-        </div>
-    </div>
-
- <!-- footer -->
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -224,10 +245,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -244,9 +265,15 @@
 		</div>
 	</footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
