--- a/cafetiere.html
+++ b/cafetiere.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Coffee Project Co.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/877201db70.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Coffee Project Co.</title>
 </head>
 
 <body>
 
-    <header>
+	<header>
 
-<!-- navbar -->
+		<!-- navbar -->
 
 		<nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html">
 				<img src="./assets/images/coffee-project-logo.png" width="100" alt="coffeeproject-logo"></a>
@@ -80,76 +81,85 @@
 				</div>
 		</nav>
 
-    </header>
+	</header>
 
-<!-- brew guides -->
+	<!-- brew guides -->
 
-<div class="container main-container">
-<div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
-          <p class="ph-landing">Brewing</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  <br>
+	<div class="container main-container">
+		<div class="container headers-landing">
+			<div class="row">
+				<div class="col">
+					<img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
+					<p class="ph-landing">Brewing</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 
-    <!-- main section -->
+	<!-- main section -->
 
-    <div class="container">
-        <div class="brewing-container">
-            <div class="row">
-                <div class="col">
-                    <h2>The French Press (Cafetiere)</h2>
-                    <hr class="section-divider">
-                    <p>It is probably the first brewing method most of us encounter. It’s simple to use and can make delicious coffee - however, because it only uses a metal mesh filter, fine particles can escape and leave a bit of sludge in the bottom of
-                        the cup.</p>
-                    <p>This method helps to minimise this so you can enjoy the full flavours and body of this brew method.</p>
-                    <p>You will need:</p>
-                    <ul>
-                        <li>French Press</li>
-                        <li>Scales</li>
-                        <li>Timer</li>
-                        <li>Filtered water, just off the boil</li>
-                        <li>68g coffee per litre of water</li>
-                        <li>Two spoons (dessert or soup spoons are ideal)</li>
-                    </ul>
-                    <ol>
-                        <li>Grind 68g for every litre of water you’ll be using and put into jug.</li>
-                        <li>Start a timer and pour in filtered water, just off the boil, pouring in a circle to make sure all grounds are wetted - but do not stir.</li>
-                        <li>Place the lid and plunger on top to keep heat in, but keep the plunger clear of the coffee.</li>
-                        <li>When the timer reaches 4:00, remove the lid and stir the coffee. The coffee that was floating on the surface will now sink to the bottom, leaving just a light foam on the surface.</li>
-                        <li>Use two spoons to skim the foam off the surface and discard.</li>
-                        <li>Replace the lid and slowly push down the plunger.</li>
-                        <li>Replace the lid and slowly push down the plunger.</li>
-                    </ol>
-                    <p>After you’ve enjoyed your coffee, clean the press thoroughly - completely disassemble the mesh each time and wash in hot soapy water to ensure no coffee remains stuck in the mesh.</p>
-                    <h4>Enjoy!</h4>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="brewing-container">
+			<div class="row">
+				<div class="col">
+					<h2>The French Press (Cafetiere)</h2>
+					<hr class="section-divider">
+					<p>It is probably the first brewing method most of us encounter. It’s simple to use and can make
+						delicious coffee - however, because it only uses a metal mesh filter, fine particles can escape
+						and leave a bit of sludge in the bottom of
+						the cup.</p>
+					<p>This method helps to minimise this so you can enjoy the full flavours and body of this brew
+						method.</p>
+					<p>You will need:</p>
+					<ul>
+						<li>French Press</li>
+						<li>Scales</li>
+						<li>Timer</li>
+						<li>Filtered water, just off the boil</li>
+						<li>68g coffee per litre of water</li>
+						<li>Two spoons (dessert or soup spoons are ideal)</li>
+					</ul>
+					<ol>
+						<li>Grind 68g for every litre of water you’ll be using and put into jug.</li>
+						<li>Start a timer and pour in filtered water, just off the boil, pouring in a circle to make
+							sure all grounds are wetted - but do not stir.</li>
+						<li>Place the lid and plunger on top to keep heat in, but keep the plunger clear of the coffee.
+						</li>
+						<li>When the timer reaches 4:00, remove the lid and stir the coffee. The coffee that was
+							floating on the surface will now sink to the bottom, leaving just a light foam on the
+							surface.</li>
+						<li>Use two spoons to skim the foam off the surface and discard.</li>
+						<li>Replace the lid and slowly push down the plunger.</li>
+						<li>Replace the lid and slowly push down the plunger.</li>
+					</ol>
+					<p>After you’ve enjoyed your coffee, clean the press thoroughly - completely disassemble the mesh
+						each time and wash in hot soapy water to ensure no coffee remains stuck in the mesh.</p>
+					<h4>Enjoy!</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <div class="text-center">
-        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
-        </div>
+	<div class="text-center">
+		<a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+	</div>
 
-    <hr class="section-divider">
+	<hr class="section-divider">
 
-    <!-- sub-section -->
+	<!-- sub-section -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="brewing-download">Want to download it as pdf?</p>
-                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<p class="brewing-download">Want to download it as pdf?</p>
+				<p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a
+						href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
+			</div>
+		</div>
+	</div>
 
- <!-- footer -->
+	<!-- footer -->
 
 	<footer>
 		<div class="footer">
@@ -204,10 +214,10 @@
 							<li class="list-inline-item footer-inline">
 								<p>1 Peaberry Street, D1 | A12 BC34</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>hi@coffeeproject.ie</p>
 							</li>
-                            <li class="list-inline-item footer-inline">
+							<li class="list-inline-item footer-inline">
 								<p>(01) 2148634</p>
 							</li>
 						</ul>
@@ -224,9 +234,15 @@
 		</div>
 	</footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
